# webtoon-2

./: manage.py  pyproject.toml
apps/accounts/: models.py
common/abstracts/: abstract_model.py
setting/: asgi.py  wsgi.py
setting/settings/: base.py
