[project]
name = "webtoon-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "djangorestframework>=3.16.0",
    "gunicorn>=23.0.0",
    "psycopg-binary>=3.2.9",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=37.3.0",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "pytest-testdox>=3.1.0",
]
